--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "mll-lab/laravel-graphql-playground": "^1.1",
         "nuwave/lighthouse": "^4.3"
     },
     "require-dev": {
